--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.7",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.15",
     "stripe": "^8.199.0"
   }
 }
